# travesty

./: .travis.yml  CHANGES.md  Makefile  README.md  dune-project  index.html  travesty.opam
.github/workflows/: workflow.yml
base_exts/src/: alist.ml  alist.mli  dune  fn.ml  fn.mli  list.ml  list.mli  option.ml  option.mli  or_error.ml  or_error.mli  result.ml  tuple2.ml  tuple2.mli
base_exts/test/: alist.ml  dune  fn.ml  list.ml  option.ml  or_error.ml  tuple2.ml
containers/src/: dune  singleton.ml  singleton.mli  zipper.ml  zipper.mli  zipper_types.mli
lib/: bi_mappable.ml  bi_mappable.mli  bi_mappable_intf.ml  dune  filter_mappable.ml  filter_mappable.mli  filter_mappable_intf.ml  index.mld  mappable.ml  mappable.mli  mappable_intf.ml  monad_transform.ml  monad_transform.mli  singleton.ml  singleton.mli  state.ml  state.mli  state_intf.ml  state_transform.ml  state_transform.mli  state_transform_intf.ml  t_alist.ml  t_alist.mli  t_container.ml  t_container.mli  t_container_intf.ml  t_fn.ml  t_fn.mli  t_list.ml  t_list.mli  t_monad.ml  t_monad.mli  t_monad_intf.ml  t_option.ml  t_option.mli  t_or_error.ml  t_or_error.mli  t_tuple2.ml  t_tuple2.mli  traversable.ml  (+3 more)
src/: bi_mappable.ml  bi_mappable.mli  bi_mappable_intf.ml  bi_mappable_types.mli  bi_traversable.ml  bi_traversable.mli  bi_traversable_intf.ml  bi_traversable_types.mli  container_exts.ml  container_exts.mli  container_exts_intf.ml  container_exts_types.mli  dune  filter_mappable.ml  filter_mappable_types.mli  generic_types.mli  index.mld  mappable.mli  mappable_types.mli  monad_exts.ml  monad_exts.mli  monad_exts_intf.ml  monad_exts_types.mli  singleton.mli  state.mli  state_transform.ml  state_transform.mli  traversable.ml  traversable.mli  traversable_intf.ml  traversable_types.mli
test/: bi_mappable.ml  bi_mappable.mli  bi_mappable_intf.ml  dune
travesty/: index.html
(+3078 files in other folders)
