opam-version: "2.0"
synopsis: "Monadically traversable containers"
description:
  "'Travesty' is a library for defining containers with monadic traversals,
   inspired by Haskell's Traversable typeclass.  It sits on top of Jane Street's
   Base library and ecosystem.."
maintainer: "Matt Windsor <m.windsor@imperial.ac.uk>"
authors: "Matt Windsor <m.windsor@imperial.ac.uk>"
license: "MIT"
doc: "https://MattWindsor91.github.io/travesty/"
homepage: "https://MattWindsor91.github.io/travesty"
bug-reports: "https://github.com/MattWindsor91/travesty/issues"
depends: [
  "ocaml" {>= "4.07"}
  "dune" {build}
  "ppx_jane"
  "base" {>= "v0.12" & < "v0.13"}
]
build: ["dune" "build" "-p" name "-j" jobs]
run-test: ["dune" "runtest" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/MattWindsor91/travesty"
